# ship-records

./: .gitlab-ci.yml  Dockerfile  ci-docker.yml  pyproject.toml  requirements.txt  vessel_name.txt
src/: abs_crawler.py  crawler_method.py  locator_config.py  readme.md  vessel_data.xlsx  vessel_name.txt  ~$vessel_data.xlsx
